* 2012-07-28 - thorben.betten@open-xchange.com

 - Fix for bug 22685: Increased timeout to 10sec
 - Fix for bug 22613: Insert line-break as separator
 - Fix for bug 22659: using proper monitor object

* 2012-07-27 - jan.bauerdick@open-xchange.com

 - New implementation of sessionstorageservice, storing sessions with cassandra

* 2012-07-26 - tobias.friedrich@open-xchange.com

 - Fix for bug 22686: Set content-type in PROPPATCH multistatus responses 

* 2012-07-25 - thorben.betten@open-xchange.com

 - Fix for bug 22674: Deal with image-surrounding plain text
 - Fix for bug 22612: Proper "Set-Cookie" handling for IE <= v8.0

* 2012-07-24 - thorben.betten@open-xchange.com

 - Fix for bug 22630 and 22629: Introduced possibility to pass "client" URL parameter which is then accepted as client identifier

* 2012-07-23 - thorben.betten@open-xchange.com

 - Fix for bug 22632: Deliver IDN address via user JSON interface

* 2012-07-18 - marcus.klein@open-xchange.com

 - PT 32897389: Removed outdated oxreport CLT

* 2012-07-18 - thorben.betten@open-xchange.com

 - Fix for bug 22582: Proper "filename" parameter in "Content-Disposition" header
 - Fix for bug 22537: Removed line breaks

* 2012-07-17 - thorben.betten@open-xchange.com

 - Fix for bug 22548: Handle special "No content" I/O error thrown by JavaMail if IMAP session is in an inconsistent state
 - Fix for bug 22584: Stick to JavaMail's Multipart implementation

* 2012-07-16 - marcus.klein@open-xchange.com

 - Fix for bug 22563: Restored previous java runtime dependencies that selects a supported JVM on each RPM distribution.

* 2012-07-16 - thorben.betten@open-xchange.com

 - Fix for bug 22564: Ignore possibly wrong message reference on reply
 - Fix for bug 22551: Don't consider module when checking for duplicate folder

* 2012-07-12 - jan.bauerdick@open-xchange.com

 - New service to store/retrieve sessions
 - Enhanced c.o.sessiond to use SessionStorageService

* 2012-07-11 - thorben.betten@open-xchange.com
